--- a/.github/workflows/sync-data.yml
+++ b/.github/workflows/sync-data.yml
@@ -7,7 +7,7 @@ on:
     paths:
       - 'data/**'                # 当 data 目录有变化时触发
       - '.github/workflows/**'   # 当 workflow 文件有变化时也触发
-
+  workflow_dispatch:             # 允许手动触发
 
 permissions:
   contents: write   # 允许写入目标仓库
@@ -31,5 +31,4 @@ jobs:
           git remote add target https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/SoarCaxton/Boss-Direction-Statistics.git
           git add .
           git commit -m "Sync data folder from BossDirection branch"
-          git push https://github.com/SoarCaxton/Boss-Direction-Statistics.git BossDirection:main
-
+          git push --force target BossDirection:main
